--- a/page3.html
+++ b/page3.html
@@ -18,7 +18,7 @@
 <div id="shooting-stars"></div>
 
 <div class="container">
-    <h1 id="songName">Loading...</h1>
+    <h1 id="songName"></h1>
 </div>
 
 <!-- Background Music -->
@@ -28,3 +28,4 @@
 
 </body>
 </html>
+
