--- a/page3.html
+++ b/page3.html
@@ -11,7 +11,7 @@
     <div class="page">
   <div class="content-box">
     <p class="content-text">นี่คือหน้า Page 3 ✨</p>
-    <p class="content-text2">asfd</p>
+    <p class="content-text2">ว้าว ว้าว ว้าว</p>
   </div>
 
 <!-- ดาวตก -->
@@ -28,4 +28,5 @@
 
 </body>
 </html>
+
 
