--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,7 @@
   <div class="content-box">
     <p class="content-text">HBD งับ 🎂</p>
     <div class="content-texts">
-      <p class="content-text2">เปิ้นไม่รู้ว่าจะถูกใจรึเปล่าเพราะ เปิ้นก็คิดว่าจะเอาอะไรให้ดีแต่ก็คิดไม่ค่อยออกเท่าไหร่เปิ้นเลยคิดว่าถ้าเป็นสิ่งที่เปิ้นทำให้ได้ล่ะแต่ก็ไม่มั่นใจหรอกนะคับว่ามันจะดีแล้วรึเปล่า เปิ้นก็ไม่เคยทำแบบนี้กับใครเหมือนกันงับ ก็ไม่ได้มีอะไรอะไรมากหรอกงับแค่เปิ้นอยากจะบอก สุขสันวันเกิดนะคับ คนสวย ของผม(รึเปล่า555) โตขึ้นอีกปีแล้วนะงับ มีความสุขมากๆเป็นตัวของตัวเองให้เต็มที่ อยากทำอะไรก็ทำงับ อะไรที่เราควบคุมมันไม่ได้ก็ไม่เป็นไรนะงับ อะไรที่ทำให้เราผิดหวังก็ปล่อยมันไปเสีย ให้มะปรางมาFocus กับสิ่งที่สามารถควบคุมได้คับ อย่างเปิ้นไง!!! ล้อเล่นนะงับ555(หรืออาจจะจริง...) ให้สิ่งร้ายๆออกจากมะปราง(อาจจะเป็นเปิ้นรึเปล่า....อันนี้ไม่เอาpls 😭) จะจบละงับอาจจะยาวนิดหน่อย ก็ในวันข้างหน้าเปิ้นก็ไม่รู้ว่าจะเกิดอะไรขึ้นรึเปล่า อาจจะผิดใจกัน ความเห็นไมตรงกันหรือเป็นอะไรต่างๆ เปิ้นก็ไม่รู้เหมือนกัน เปิ้นอยากเราตัดสินใจพูดแก้มันไปด้วยกัน เพราะสิ่งที่เปิ้นมั่นใจอย่างหนึ่งเลยมะปรางอาจจะรู้แล้วแต่เปิ้นก็เต็มใจที่จะบอกอีกคือ เปิ้นจะอยู่ตรงนี้เสมอและจะไม่หายไปไหน แล้วก็ไม่อยากให้มะปรางหายไปด้วย TT ละก็อย่างสุดท้ายแล้วแหละมั้งงับ คือเปิ้น รักมะปรางนะงับ อยากให้มะปรางมีความสุขเยอะเลยคับป๋ม อะๆ มีอีกออย่างคือ</p>
+      <p class="content-text2">เปิ้นไม่รู้ว่าจะถูกใจรึเปล่าเพราะ เปิ้นก็คิดว่าจะเอาอะไรให้ดีแต่ก็คิดไม่ค่อยออกเท่าไหร่เปิ้นเลยคิดว่าถ้าเป็นสิ่งที่เปิ้นทำให้ได้ล่ะแต่ก็ไม่มั่นใจหรอกนะคับว่ามันจะดีแล้วรึเปล่า เปิ้นก็ไม่เคยทำแบบนี้กับใครเหมือนกันงับ ก็ไม่ได้มีอะไรอะไรมากหรอกงับแค่เปิ้นอยากจะบอก สุขสันวันเกิดนะคับ คนสวย ของผม(รึเปล่า555) โตขึ้นอีกปีแล้วนะงับ มีความสุขมากๆเป็นตัวของตัวเองให้เต็มที่ อยากทำอะไรก็ทำงับ อะไรที่เราควบคุมมันไม่ได้ก็ไม่เป็นไรนะงับ อะไรที่ทำให้เราผิดหวังก็ปล่อยมันไป ให้มะปรางมาFocus กับสิ่งที่สามารถควบคุมได้คับ อย่างเปิ้นไง!!! ล้อเล่นนะงับ555(หรืออาจจะจริง...) ให้สิ่งร้ายๆออกจากมะปราง(อาจจะเป็นเปิ้นรึเปล่า....อันนี้ไม่เอาpls 😭) จะจบละงับอาจจะยาวนิดหน่อย ก็ในวันข้างหน้าเปิ้นก็ไม่รู้ว่าจะเกิดอะไรขึ้นรึเปล่า อาจจะผิดใจกัน ความเห็นไมตรงกันหรือเป็นอะไรต่างๆ เปิ้นก็ไม่รู้เหมือนกัน เปิ้นอยากให้เราเปิดใจคุยแก้มันไปด้วยกัน เพราะสิ่งที่เปิ้นมั่นใจอย่างหนึ่งเลยมะปรางอาจจะรู้แล้วแต่เปิ้นก็เต็มใจที่จะบอกอีกคือ เปิ้นจะอยู่ตรงนี้เสมอและจะไม่หายไปไหน แล้วก็ไม่อยากให้มะปรางหายไปด้วย TT ละก็อย่างสุดท้ายแล้วแหละมั้งงับ คือเปิ้น รักมะปรางนะงับ อยากให้มะปรางมีความสุขเยอะเลยคับป๋ม อะๆ มีอีกออย่างคือ...</p>
       <button id="revealBtn" class="reveal-btn" aria-expanded="false">ดูเพิ่มเติม</button>
       <p class="content-text3">เปิ้นอยาก...เรียกมะปรางในนามอื่นๆ อะไรสักอย่างเนี่ยแหละอย่าง คุณฟ b ml ถ้าชื่อเรียกคิดได้จะลองเรียกดูได้มั้ยงับ 🥺</p>
 
@@ -31,4 +31,5 @@
 
 </body>
 </html>
+
 
